--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -11,6 +11,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
        lfs: true
+    - name: Install youtube-dl and ffmpeg
+      run: sudo apt-get install youtube-dl ffmpeg
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
