--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -21,9 +21,13 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: 2.7
-    - name: Fetch updates
+    - name: Sync updates
       run: ruby update.rb
-    - name: Push updates
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        S3_BUCKET: bccovidpod
+    - name: Push updated feed
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
@@ -31,7 +35,3 @@ jobs:
         git add feed.xml
         git commit -m "Updated $(date -u)" || exit 0
         git push
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        S3_BUCKET: bccovidpod
