Copy feed from data/

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -32,6 +32,7 @@ jobs:
         ITEM_LIMIT: 6
     - name: Push updated feed
       run: |
+        cp ./data/feed.xml ./feed.xml
         git config user.name github-actions
         git config user.email github-actions@github.com
         git status
