--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,10 +13,11 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install youtube-dl
       run: |
-        sudo wget https://yt-dl.org/downloads/latest/youtube-dl -O /usr/local/bin/youtube-dl
+        sudo wget -q https://yt-dl.org/downloads/latest/youtube-dl -O /usr/local/bin/youtube-dl
         sudo chmod a+rx /usr/local/bin/youtube-dl
     - name: Install ffmpeg
-      run: sudo apt-get install ffmpeg
+      run: |
+        wget -q https://johnvansickle.com/ffmpeg/builds/ffmpeg-git-amd64-static.tar.xz -O - | sudo tar xvJ --strip-components=1 -C /usr/local/bin/ --no-anchored ffmpeg ffprobe
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
