--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -17,7 +17,7 @@ jobs:
         sudo chmod a+rx /usr/local/bin/youtube-dl
     - name: Install ffmpeg
       run: |
-        wget -q https://johnvansickle.com/ffmpeg/builds/ffmpeg-git-amd64-static.tar.xz -O - | sudo tar xvJ --strip-components=1 -C /usr/local/bin/ --no-anchored ffmpeg ffprobe
+        wget -q --timeout=120 https://johnvansickle.com/ffmpeg/builds/ffmpeg-git-amd64-static.tar.xz -O - | sudo tar xvJ --strip-components=1 -C /usr/local/bin/ --no-anchored ffmpeg ffprobe
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
