--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -30,12 +30,14 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         S3_BUCKET: bccovidpod
         ITEM_LIMIT: 6
+    - name: Generate landing page
+      run: bundle exec ruby -r rss -S erb index.html.erb > index.html
     - name: Push updated feed
       run: |
         curl -o ./feed.xml https://bccovidpod.s3.us-east-1.amazonaws.com/feed.xml
         git config user.name github-actions
         git config user.email github-actions@github.com
         git status
-        git add feed.xml
+        git add feed.xml index.html
         git commit -m "Updated $(date -u)" || exit 0
         git push
