--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -24,7 +24,9 @@ jobs:
     - name: Installing gems
       run: bundle install -j4
     - name: Sync updates
-      run: bundle exec ruby update.rb
+      run: |
+        bundle exec ruby update.rb
+        curl -o ./feed.xml https://bccovidpod.s3.us-east-1.amazonaws.com/feed.xml
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -34,7 +36,6 @@ jobs:
       run: bundle exec ruby -r rss -S erb index.html.erb > index.html
     - name: Push updated feed
       run: |
-        curl -o ./feed.xml https://bccovidpod.s3.us-east-1.amazonaws.com/feed.xml
         git config user.name github-actions
         git config user.email github-actions@github.com
         git status
