--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,8 +3,8 @@ name: Update
 on:
   push:
     branches: [ main ]
-  schedule:
-    - cron: 0 0 * * *
+#  schedule:
+#    - cron: 0 0 * * *
 
 jobs:
   update:
