--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -35,11 +35,19 @@ jobs:
         ITEM_LIMIT: 6
     - name: Generate landing page
       run: bundle exec ruby -r rss -S erb index.html.erb > index.html
-    - name: Push updated feed
-      run: |
-        git config user.name github-actions
-        git config user.email github-actions@github.com
-        git status
-        git add feed.xml index.html
-        git commit -m "Updated $(date -u)" || exit 0
-        git push
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v1
+      with:
+        path: ./
+
+  # Deployment job
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: update
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
